feat(novel-crawl): 增加单本采集任务进度显示功能